--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,8 @@
 <!--
   ~     Copyright (C) 2021.  Mathias Jakobsen <m.jakobsen.1@research.gla.ac.uk>
   ~
+  ~     Tropicode is a Java bytecode analyser used to verify object protocols.
+  ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
   ~     the Free Software Foundation, either version 3 of the License, or
@@ -22,7 +24,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.papaya</groupId>
-    <artifactId>Papaya</artifactId>
+    <artifactId>Tropicode</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
